# OMS

./: .clang-format  CMakeLists.txt  README.md
data/: admin.txt  company.txt  order.txt
include/: admin.h  company.h  companyList.h  file.h  list.h  listNode.h  menu.h  order.h  orderList.h  user.h
src/: admin.cpp  company.cpp  companyList.cpp  main.cpp  menu.cpp  order.cpp  orderList.cpp  user.cpp
